--- a/NextAppPrismic/nextprismic/package.json
+++ b/NextAppPrismic/nextprismic/package.json
@@ -6,9 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "slicemachine": "start-slicemachine"
   },
   "dependencies": {
+    "@prismicio/client": "^7.16.1",
+    "@prismicio/next": "^2.0.0",
+    "@prismicio/react": "^3.1.0",
     "clsx": "^2.1.1",
     "next": "15.2.0",
     "react": "^19.0.0",
@@ -16,12 +20,14 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@slicemachine/adapter-next": "^0.3.68",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
+    "slice-machine-ui": "^2.13.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
